# libuv-vc6

./: AUTHORS  CMakeLists.txt  README.md
include/: uv-win.h  uv.h
src/: inet.c  uv-common.c
src/win/: core.c  error.c  fs-event.c  fs.c  pipe.c  poll.c  process.c  tcp.c  thread.c  tty.c  udp.c  util.c  winsock.h
src/win/psapi/: readme.txt
win32/: libuv.dsp
